<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SNAICO</string>
    <string name="title_activity_snaicosplash">SNAICOSplash</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_snicooverview">SNICOOverview</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!-- SNAICOLeaveCompany -->
    <string name="firmaVerlassenHeadline">Firma verlassen</string>
    <string name="firmaVerlassenText">Sind Sie sicher das Sie die Firma verlassen wollen? Wenn ja geben Sie bitte den Firmencode ein:</string>
    <string name="firmaVerlassenBtn">bestätigen</string>
    <string name="firmaVerlassenFinishHeadline">Erfolgreich verlassen</string>
    <string name="firmaVerlassenFinishText">Sie haben die Firma XY erfolgreich verlassen.</string>
    <string name="firmaVerlassenFinishTextFragment1">"Sie haben die Firma "</string>
    <string name="firmaVerlassenFinishTextFragment2">" erfolgreich verlassen"</string>
    <string name="firmaVerlassenFinishBtn">zum Startbildschirm</string>

    <!-- SNAICOJoinCompany -->
    <string name="firmaBeitretenHeadline">Firma beitreten</string>
    <string name="firmaBeitretenText">Bitte geben Sie Ihren Namen und den Firmen Code ein:</string>
    <string name="firmaBeitretenBtn">bestätigen</string>
    <string name="firmaBeitretenFinishHeadline">Erfolgreich beigetreten</string>
    <string name="firmaBeitretenFinishText">Sie sind der Firma XY beigetreten Ihnen stehen jetzt alle Funktionen zur Verfügung.</string>
    <string name="firmaBeitretenFinishTextFragment1">"Sie sind der Firma "</string>
    <string name="firmaBeitretenFinishTextFragment2">" beigetreten Ihnen stehen jetzt alle Funktionen zur Verfügung."</string>
    <string name="firmaBeitretenFinishBtn">zur Übersicht</string>

    <!-- SNAICONewCompany -->
    <string name="firmaGruendenHeadline">Firma gründen</string>
    <string name="firmaGruendenText">Bitte geben Sie Ihren Namen und den Firmennamen ein:</string>
    <string name="firmaGruendenBtn">bestätigen</string>
    <string name="firmaGruendenCodeHeadline">Einladungscode</string>
    <string name="firmaGruendenCodeText">Die Firma wurde erfolgreich erstellt. Bitte geben Sie diesen Code an Ihre Mitarbeiter, damit diese Ihrer Firma beitreten können</string>
    <string name="firmaGruendenCodeBtn">Code Weiterleiten</string>
    <string name="firmaGruendenUebersichtBtn">zur Übersicht</string>

    <!-- SNAICOFirstStart -->
    <string name="firstStartText">"Herzlich Willkommen bei der Applikation SNAICO - snow and ice controller.\nBitte wählen Sie zwischen den folgenden Optionen:"</string>

    <!-- SNAICOOverview -->
    <string name="wetterlage">"aktuelle \nWetterlage"</string>

    <!-- SNAICOOverviewJob -->
    <string name="uebersichtNeuerAuftrag">"Auftrag Übersicht"</string>
    <string name="uebersichtAuftragBestaetigen">Auftrag annehmen</string>
    <string name="detailNeuerAuftrag">"Auftrag Übersicht"</string>
    <string name="detailAuftragNeuerKommentar">neuer Kommentar</string>
    <string name="detailAuftragBestaetigen">zur Übersicht</string>
    <!-- SNAICONewJob -->
    <string name="neuerAuftragHeadline">Auftrag anlegen</string>
    <string name="neuerAuftragPositionGps">Standort ermitteln</string>
    <string name="neuerAuftragPositionAdresse">Adresse eingeben</string>
    <string name="neuerAuftragBestaetigen">bestätigen</string>
    <string name="NeuerAuftragAngelegtHeadline">Auftrag erfolgreich angelegt.</string>
    <string name="NeuerAuftragAngelegtTextView">Ihr Auftrag wurde erfolgreich angelegt und der Mitarbeiter wurde benachrichtigt</string>
    <string name="NeuerAuftragAngelegtBtn">zur Übersicht</string>

    <!-- Navigation Drawer Sections -->
    <string name="title_section1">Anzeigenamen ändern</string>
    <string name="title_section2">Weckfunktion</string>
    <string name="title_section3">Firmenleitung abgeben</string>
    <string name="title_section4">Firma gründen</string>
    <string name="title_section5">Firma verlassen</string>
    <string name="title_section6">Firma löschen</string>
    <string name="title_activity_snaicofirst_start">SNAICOFirstStart</string>
    <string name="title_activity_snaiconew_company">SNAICONewCompany</string>
    <string name="title_activity_snaiconew_company_code">SNAICONewCompanyCode</string>
    <string name="title_activity_snaicojoin_company">SNAICOJoinCompany</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_snaicooverview_staff">SNAICOOverviewStaff</string>
    <string name="title_activity_snaicojoin_company_finish">SNAICOJoinCompanyFinish</string>
    <string name="title_activity_snaicoleave_company">SNAICOLeaveCompany</string>
    <string name="title_activity_snaicoleave_company_finish">SNAICOLeaveCompanyFinish</string>
    <string name="title_activity_snaiconew_job">SNAICONewJob</string>
    <string name="title_activity_snaicoget_position_gps">SNAICOGetPositionGPS</string>
    <string name="title_activity_snaicoserver_ip">SNAICOServerIp</string>

    <!-- IpEingeben -->
    <string name="ipEingebenTextView">Bitte geben Sie die Adresse des Servers ein: </string>
    <string name="ipEingebenBtn">bestätigen</string>
    <string name="title_activity_new_job_finish">NewJobFinish</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_testdrawer">testdrawer</string>

    <!-- SharedPreferences -->
    <string name="preference_file_key">eis1415.rebecca.simon.snaico.DataStore</string>
    <string name="title_activity_snaicooverview_job">SNAICOOverviewJob</string>
    <string name="title_activity_snaicodetail_job">SNAICODetailJob</string>

</resources>
