<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#232323"
    tools:context="eis1415.rebecca.simon.snaico.SNAICOLeaveCompany">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firmaVerlassenHeadline"
        android:text="@string/firmaVerlassenHeadline"
        android:textSize="20sp"
        android:width="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firmaVerlassenText"
        android:text="@string/firmaVerlassenText"
        android:textSize="16sp"
        android:width="300dp"
        android:layout_below="@+id/firmaVerlassenHeadline"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firmaVerlassenEditText"
        android:layout_below="@+id/firmaVerlassenText"
        android:layout_marginTop="50dp"
        android:width="300dp"
        android:height="50dp"
        android:background="#fff"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firmaVerlassenBtn"
        android:id="@+id/firmaVerlassenBtn"
        android:background="#dedede"
        android:textColor="#ff000000"
        android:width="300dp"
        android:height="50dp"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firmaVerlassenEditText"
        android:layout_marginTop="30dp" />

</RelativeLayout>
