<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#232323">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#232323"
        tools:context="eis1415.rebecca.simon.snaico.SNAICODetailJob">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/detailNeuerAuftrag"
            android:id="@+id/detailNeuerAuftrag"
            android:textSize="20sp"
            android:width="300dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Position:"
            android:id="@+id/detailAuftragPosition"
            android:layout_below="@+id/detailNeuerAuftrag"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:width="300dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAuftragAdresseTextView"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_below="@+id/detailAuftragPosition"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Tätigkeit:"
            android:id="@+id/detailAuftragTaetitkeitTextView"
            android:layout_below="@+id/detailAuftragAdresseTextView"
            android:layout_marginTop="33dp"
            android:textSize="16sp"
            android:width="300dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAuftragTaetitkeitEditText"
            android:width="300dp"
            android:height="50dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="20sp"
            android:layout_below="@+id/detailAuftragTaetitkeitTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Mitarbeiter:"
            android:id="@+id/detailAuftragMitarbeiterTextView"
            android:layout_below="@+id/detailAuftragTaetitkeitEditText"
            android:textSize="16sp"
            android:width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAuftragMitarbeiter"
            android:layout_below="@+id/detailAuftragMitarbeiterTextView"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Kommentar:"
            android:id="@+id/detailAuftragKommentarTextViewHead"
            android:layout_below="@+id/detailAuftragMitarbeiter"
            android:textSize="16sp"
            android:width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAuftragKommentarTextView"
            android:layout_below="@+id/detailAuftragKommentarTextViewHead"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="#dedede"
            android:textColor="#ff000000"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAuftragNeuerKommentar"
            android:layout_below="@+id/detailAuftragKommentarTextView"
            android:text="@string/detailAuftragNeuerKommentar"
            android:layout_marginTop="15dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="#dedede"
            android:textColor="#ff000000"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAuftragBestaetigen"
            android:layout_below="@+id/detailAuftragNeuerKommentar"
            android:text="@string/detailAuftragBestaetigen"
            android:layout_marginTop="15dp"/>

    </RelativeLayout>

</ScrollView>
